Epiphany not detecting form controls created by JS frameworks

This is the first patch from a set of 3 which removes the dependency with
form_password. We don't actually need a named password field in forms in
order to store/restore authentication data.

https://bugzilla.gnome.org/show_bug.cgi?id=773327